# Lexi-Central-App

./: build_and_setup.sh  fix_and_push.ps1  gradle.properties  kirby_build.ps1
.github/workflows/: android.yml  build-apk.yml  expo-cloud-build.yml
Lexi Central/: ARCHITECTURE.md  BUGFIX_SUMMARY.md  CRITICAL_FIXES.md  FINAL_FEATURES.md  QUICK_FIX.md  README.md  RUN_WINDOWS.bat  SETUP_GUIDE.md  THEME_CUSTOMIZATION.md  VISUAL_STUDIO_FIX.md  pubspec.yaml
Lexi Central/android/: settings.gradle
Lexi Central/android/app/: build.gradle
Lexi Central/android/app/src/main/: AndroidManifest.xml
Lexi Central/lib/: main.dart
Lexi Central/lib/core/screens/: home_screen.dart
Lexi Central/lib/core/theme/: app_theme.dart
Lexi Central/lib/core/widgets/: bouncy_button.dart  kirby_background.dart  main_layout.dart
Lexi Central/lib/features/customization/data/models/: customization_models.dart
Lexi Central/lib/features/customization/data/services/: customization_service.dart
Lexi Central/lib/features/customization/domain/providers/: customization_provider.dart
Lexi Central/lib/features/customization/presentation/screens/: customization_screen.dart  loading_screen.dart
Lexi Central/lib/features/customization/presentation/widgets/: background_selector.dart  module_layout_editor.dart  theme_preset_card.dart
Lexi Central/lib/features/discord_feed/data/models/: discord_models.dart
Lexi Central/lib/features/discord_feed/data/services/: discord_api_service.dart
Lexi Central/lib/features/discord_feed/domain/providers/: discord_provider.dart
Lexi Central/lib/features/discord_feed/presentation/: discord_screen.dart
Lexi Central/lib/features/discord_feed/presentation/widgets/: discord_message_widget.dart  message_list.dart  server_channel_selector.dart
Lexi Central/lib/features/gallery/data/models/: media_item.dart
Lexi Central/lib/features/gallery/data/repositories/: gallery_repository.dart
Lexi Central/lib/features/gallery/domain/providers/: gallery_provider.dart
Lexi Central/lib/features/gallery/presentation/: gallery_screen.dart
Lexi Central/lib/features/gallery/presentation/widgets/: floating_import_button.dart  media_grid.dart  media_thumbnail.dart  media_viewer.dart
Lexi Central/lib/features/notes_links/data/models/: notes_models.dart
Lexi Central/lib/features/notes_links/data/services/: link_preview_service.dart  notes_storage_service.dart
Lexi Central/lib/features/notes_links/domain/providers/: notes_provider.dart
Lexi Central/lib/features/notes_links/presentation/: notes_screen.dart
Lexi Central/lib/features/vault/presentation/: vault_screen.dart
Lexi Central/lib/navigation/: app_router.dart
Lexi Central/test/: widget_test.dart
Lexi Central/windows/: CMakeLists.txt
Lexi Central/windows/runner/: CMakeLists.txt  Runner.rc  main.cpp
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: colors.xml  themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
project/: .env.production  app.json  eas.json  package-lock.json  package.json
project/android/: gradle.properties  settings.gradle
project/android/app/: build.gradle
project/android/app/src/main/: AndroidManifest.xml
project/app/: _layout.tsx
project/app/(tabs)/: _layout.tsx  calendar.tsx  hub.tsx  index.tsx  notes.tsx  settings.tsx  vault.tsx  voice.tsx
project/app/media/: [id].tsx
project/components/common/: AnimatedBackground.tsx
project/components/gallery/: MediaCard.tsx
project/components/player/: MegaBridge.tsx  NotesPanel.tsx
project/constants/: themes.ts
project/context/: MediaContext.tsx  SettingsContext.tsx
project/lib/: mockData.ts  supabase.ts  types.ts  utils.ts
project/supabase/migrations/: 20260411032039_create_lexi_central_schema.sql
(+28 files in other folders)
